--- a/notebook/chapter6.ipynb
+++ b/notebook/chapter6.ipynb
@@ -32,44 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading builder script: 100%|██████████| 3.98k/3.98k [00:00<00:00, 26.0MB/s]\n",
-      "Using custom data configuration default\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading and preparing dataset ner-wikipedia-dataset/default to /root/.cache/huggingface/datasets/llm-book___ner-wikipedia-dataset/default/0.0.0/184bcf9be66116e777f2f534436226d47348676c93ba20cca58933f1b2b3b782...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading data: 4.04MB [00:00, 59.4MB/s]                  \n",
-      "                                                                  \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset ner-wikipedia-dataset downloaded and prepared to /root/.cache/huggingface/datasets/llm-book___ner-wikipedia-dataset/default/0.0.0/184bcf9be66116e777f2f534436226d47348676c93ba20cca58933f1b2b3b782. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 3/3 [00:00<00:00, 682.30it/s]\n"
+      "/usr/local/lib/python3.10/dist-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Using custom data configuration default\n",
+      "Reusing dataset ner-wikipedia-dataset (/root/.cache/huggingface/datasets/llm-book___ner-wikipedia-dataset/default/0.0.0/184bcf9be66116e777f2f534436226d47348676c93ba20cca58933f1b2b3b782)\n",
+      "100%|██████████| 3/3 [00:00<00:00, 213.86it/s]\n"
      ]
     }
    ],
@@ -82,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -319,6 +293,312 @@
     "            spans = [e[\"span\"] for e in data[\"entities\"]]\n",
     "            overlap_count += has_overlap(spans)\n",
     "    print(f\"{split}におけるスパンが重複する事例数:{overlap_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 前処理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### テキストの正規化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "正規化前: ＡＢＣABCａｂｃabcｱｲｳアイウ①②③123\n",
+      "正規化後: ABCABCabcabcアイウアイウ123123\n"
+     ]
+    }
+   ],
+   "source": [
+    "from unicodedata import normalize\n",
+    "\n",
+    "# テキストに対してUnicode正規化を行う\n",
+    "text =  \"ＡＢＣABCａｂｃabcｱｲｳアイウ①②③123\"\n",
+    "normalized_text = normalize(\"NFKC\", text)\n",
+    "print(f\"正規化前: {text}\")\n",
+    "print(f\"正規化後: {normalized_text}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "正規化前: ㈱、3㌕、10℃\n",
+      "正規化後: (株)、3キログラム、10°C\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 文字列の長さが変わる場合ある\n",
+    "text = \"㈱、3㌕、10℃\"\n",
+    "normalized_text = normalize(\"NFKC\", text)\n",
+    "print(f\"正規化前: {text}\")\n",
+    "print(f\"正規化後: {normalized_text}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "正規化されていない事例数: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from unicodedata import normalize, is_normalized\n",
+    "\n",
+    "count = 0\n",
+    "for split in dataset: # 各分割セットを処理する\n",
+    "    for data in dataset[split]: # 各事例を処理する\n",
+    "        # テキストが正規化されていない事例をカウントする\n",
+    "        if not is_normalized(\"NFKC\", data[\"text\"]):\n",
+    "            count += 1\n",
+    "print(f\"正規化されていない事例数: {count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### テキストのトークナイゼーション"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "サブワード単位: さくら/学院/、/C/##ia/##o/Sm/##ile/##s/の/メンバー/。\n",
+      "文単位: さ/く/ら/学/院/、/C/i/a/o/ /S/m/i/l/e/s/の/メ/ン/バ/ー/。\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "# トークナイザを読み込み\n",
+    "model_name = \"tohoku-nlp/bert-base-japanese-v3\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "# トークナイゼーションを行う\n",
+    "subwords = \"/\".join(tokenizer.tokenize(dataset[\"train\"][0][\"text\"]))\n",
+    "characters = \"/\".join(dataset[\"train\"][0][\"text\"])\n",
+    "print(f\"サブワード単位: {subwords}\")\n",
+    "print(f\"文単位: {characters}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 文字列とトークン列のアライメント"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"さくら学院\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "文字のlist: ['さ', 'く', 'ら', '学', '院']\n",
+      "トークンのlist: ['[CLS]', 'さくら', '学院', '[SEP]']\n",
+      "文字に対するトークンの位置: [[1], [1], [1], [2], [2]]\n",
+      "トークンに対する文字の位置: [[], [0, 1, 2], [3, 4], []]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy_alignments.tokenizations import get_alignments\n",
+    "\n",
+    "# 文字列のlistを獲得する\n",
+    "characters = list(text)\n",
+    "# テキストを特殊トークンを含めたトークンのlistに変換する\n",
+    "tokens = tokenizer.convert_ids_to_tokens(tokenizer.encode(text))\n",
+    "# 文字のlistとトークンのlistのアライメントをとる\n",
+    "char_to_token_indices, token_to_char_indices = get_alignments(characters, tokens)\n",
+    "print(f\"文字のlist: {characters}\")\n",
+    "print(f\"トークンのlist: {tokens}\")\n",
+    "print(f\"文字に対するトークンの位置: {char_to_token_indices}\")\n",
+    "print(f\"トークンに対する文字の位置: {token_to_char_indices}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 系列ラベリングのためのラベル作成"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"大谷翔平は岩手県水沢市出身\"\n",
+    "entities = [\n",
+    "    {\"name\": \"大谷翔平\", \"span\": [0,4], \"type\": \"人名\"},\n",
+    "    {\"name\": \"岩手県水沢市\", \"span\": [5,11], \"type\": \"地名\"},\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>位置</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>10</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>トークン列</th>\n",
+       "      <td>[CLS]</td>\n",
+       "      <td>大谷</td>\n",
+       "      <td>翔</td>\n",
+       "      <td>##平</td>\n",
+       "      <td>は</td>\n",
+       "      <td>岩手</td>\n",
+       "      <td>県</td>\n",
+       "      <td>水沢</td>\n",
+       "      <td>市</td>\n",
+       "      <td>出身</td>\n",
+       "      <td>[SEP]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ラベル列</th>\n",
+       "      <td>-</td>\n",
+       "      <td>B-人名</td>\n",
+       "      <td>I-人名</td>\n",
+       "      <td>I-人名</td>\n",
+       "      <td>O</td>\n",
+       "      <td>B-地名</td>\n",
+       "      <td>I-地名</td>\n",
+       "      <td>I-地名</td>\n",
+       "      <td>I-地名</td>\n",
+       "      <td>O</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "位置        0     1     2     3  4     5     6     7     8   9      10\n",
+       "トークン列  [CLS]    大谷     翔   ##平  は    岩手     県    水沢     市  出身  [SEP]\n",
+       "ラベル列       -  B-人名  I-人名  I-人名  O  B-地名  I-地名  I-地名  I-地名   O      -"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from transformers import PreTrainedTokenizer\n",
+    "\n",
+    "def output_tokens_and_labels(\n",
+    "    text: str,\n",
+    "    entities: list[dict[str, list[int] | str]],\n",
+    "    tokenizer: PreTrainedTokenizer,\n",
+    ") -> tuple[list[str], list[str]]:\n",
+    "    \"\"\"トークンのlistとラベルのlistを出力\"\"\"\n",
+    "    # 文字列のlistとトークンのlistのアライメントをとる\n",
+    "    characters = list(text)\n",
+    "    tokens = tokenizer.convert_ids_to_tokens(tokenizer.encode(text))\n",
+    "    char_to_token_indices, _ = get_alignments(characters, tokens)\n",
+    "    \n",
+    "    # \"O\"のラベルで初期化したラベルのlistを作成する\n",
+    "    labels = [\"O\"] * len(tokens)\n",
+    "    for entity in entities: # 各固有表現で処理する\n",
+    "        entity_span, entity_type = entity[\"span\"], entity[\"type\"]\n",
+    "        start = char_to_token_indices[entity_span[0]][0]\n",
+    "        end = char_to_token_indices[entity_span[1]-1][0]\n",
+    "        # 固有表現の開始トークンの位置に\"B-\"のラベルを設定する\n",
+    "        labels[start] = f\"B-{entity_type}\"\n",
+    "        # 固有表現の開始トークン以外の位置に\"I-\"のラベルを設定する\n",
+    "        for idx in range(start + 1, end + 1):\n",
+    "            labels[idx] = f\"I-{entity_type}\"\n",
+    "    # 特殊トークンの位置にはラベルを設定しない\n",
+    "    labels[0] = \"-\" # 開始\n",
+    "    labels[-1] = \"-\" # 終了\n",
+    "    return tokens, labels\n",
+    "\n",
+    "# トークンとラベルのlistを出力する\n",
+    "tokens, labels = output_tokens_and_labels(text, entities, tokenizer)\n",
+    "# DataFrameの形式で表示する\n",
+    "df = pd.DataFrame({\"トークン列\": tokens, \"ラベル列\": labels})\n",
+    "df.index.name = \"位置\"\n",
+    "display(df.T)"
    ]
   },
   {
