--- a/notebook/chapter6.ipynb
+++ b/notebook/chapter6.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Using custom data configuration default\n",
       "Reusing dataset ner-wikipedia-dataset (/root/.cache/huggingface/datasets/llm-book___ner-wikipedia-dataset/default/0.0.0/184bcf9be66116e777f2f534436226d47348676c93ba20cca58933f1b2b3b782)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 213.86it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 279.42it/s]\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -599,6 +599,154 @@
     "df = pd.DataFrame({\"トークン列\": tokens, \"ラベル列\": labels})\n",
     "df.index.name = \"位置\"\n",
     "display(df.T)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 評価指標"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### seqevalライブラリを用いた評価スコアの算出"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Any\n",
+    "from seqeval.metrics import classification_report\n",
+    "\n",
+    "def create_character_labels(\n",
+    "    text: str, entities: list[dict[str, list[int] | str]]\n",
+    ") -> list[str]:\n",
+    "    \"\"\"文字ベースでラベルのlistを作成\"\"\"\n",
+    "    # \"O\"のラベルで初期化したラベルのlistを作成する\n",
+    "    labels = [\"O\"] * len(text)\n",
+    "    for entity in entities: # 各固有表現を処理する\n",
+    "        entity_span, entity_type = entity[\"span\"], entity[\"type\"]\n",
+    "        # 固有表現の開始文字の位置に\"B-\"のラベルを設定する\n",
+    "        labels[entity_span[0]] = f\"B-{entity_type}\"\n",
+    "        # 固有表現の開始文字以外の位置に\"I-\"ラベルを設定する\n",
+    "        for i in range(entity_span[0] + 1, entity_span[1]):\n",
+    "            labels[i] = f\"I-{entity_type}\"\n",
+    "    return labels\n",
+    "    \n",
+    "def convert_results_to_labels(\n",
+    "    results: list[dict[str, Any]]\n",
+    ") -> tuple[list[list[str]], list[list[str]]]:\n",
+    "    \"\"\"正解データと予測データのラベルのlistを作成\"\"\"\n",
+    "    true_labels, pred_labels = [], []\n",
+    "    for result in results: # 各事例を処理する\n",
+    "        # 文字ベースでラベルのリストを作成してlistに加える\n",
+    "        true_labels.append(\n",
+    "            create_character_labels(result[\"text\"], result[\"entities\"])\n",
+    "        )\n",
+    "        pred_labels.append(\n",
+    "            create_character_labels(result[\"text\"], result[\"pred_entities\"])\n",
+    "        )\n",
+    "    return true_labels, pred_labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "          人名       1.00      1.00      1.00         1\n",
+      "          地名       0.00      0.00      0.00         1\n",
+      "         施設名       0.00      0.00      0.00         0\n",
+      "\n",
+      "   micro avg       0.33      0.50      0.40         2\n",
+      "   macro avg       0.33      0.33      0.33         2\n",
+      "weighted avg       0.50      0.50      0.50         2\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/seqeval/metrics/v1.py:57: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = [\n",
+    "    {\n",
+    "        \"text\": \"大谷翔平は岩手県水沢市出身\",\n",
+    "        \"entities\": [\n",
+    "            {\"name\": \"大谷翔平\", \"span\": [0,4], \"type\": \"人名\"},\n",
+    "            {\"name\": \"岩手県水沢市\", \"span\": [5, 11], \"type\": \"地名\"}\n",
+    "        ],\n",
+    "        \"pred_entities\": [\n",
+    "            {\"name\": \"大谷翔平\", \"span\": [0,4], \"type\": \"人名\"},\n",
+    "            {\"name\": \"岩手県\", \"span\": [5,8], \"type\": \"地名\"},\n",
+    "            {\"name\": \"水沢市\", \"span\": [8,11], \"type\": \"施設名\"}\n",
+    "        ],\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "# 正解データと予測データのラベルのlistを作成\n",
+    "true_labels, pred_labels = convert_results_to_labels(results)\n",
+    "# 評価結果を取得して表示\n",
+    "print(classification_report(true_labels, pred_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'precision': 0.3333333333333333, 'recall': 0.5, 'f1-score': 0.4}\n",
+      "{'precision': 0.3333333333333333, 'recall': 0.3333333333333333, 'f1-score': 0.3333333333333333}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.10/dist-packages/seqeval/metrics/v1.py:57: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from seqeval.metrics import f1_score, precision_score, recall_score\n",
+    "\n",
+    "def compute_scores(\n",
+    "    true_labels: list[list[str]], pred_labels: list[list[str]], average: str\n",
+    ") -> dict[str, float]:\n",
+    "    \"\"\"適合率、再現率、F値を算出\"\"\"\n",
+    "    scores = {\n",
+    "        \"precision\": precision_score(true_labels, pred_labels, average=average),\n",
+    "        \"recall\": recall_score(true_labels, pred_labels, average=average),\n",
+    "        \"f1-score\": f1_score(true_labels, pred_labels, average=average),\n",
+    "    }\n",
+    "    return scores\n",
+    "\n",
+    "# 適合率、再現率、F値のマイクロ平均を算出する\n",
+    "print(compute_scores(true_labels, pred_labels, \"micro\"))\n",
+    "# 適合率、再現率、F値のマクロ平均を算出する\n",
+    "print(compute_scores(true_labels, pred_labels, \"macro\"))"
    ]
   },
   {
