--- a/notebook/chapter6.ipynb
+++ b/notebook/chapter6.ipynb
@@ -43,7 +43,7 @@
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "Using custom data configuration default\n",
       "Reusing dataset ner-wikipedia-dataset (/root/.cache/huggingface/datasets/llm-book___ner-wikipedia-dataset/default/0.0.0/184bcf9be66116e777f2f534436226d47348676c93ba20cca58933f1b2b3b782)\n",
-      "100%|██████████| 3/3 [00:00<00:00, 279.42it/s]\n"
+      "100%|██████████| 3/3 [00:00<00:00, 263.63it/s]\n"
      ]
     }
    ],
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -753,12 +753,78 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 固有表現認識モデルの構築"
+    "#### 固有表現認識モデルの実装"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### BERTのファインチューニング"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 'O',\n",
+      " 1: 'B-その他の組織名',\n",
+      " 2: 'I-その他の組織名',\n",
+      " 3: 'B-イベント名',\n",
+      " 4: 'I-イベント名',\n",
+      " 5: 'B-人名',\n",
+      " 6: 'I-人名',\n",
+      " 7: 'B-地名',\n",
+      " 8: 'I-地名',\n",
+      " 9: 'B-政治的組織名',\n",
+      " 10: 'I-政治的組織名',\n",
+      " 11: 'B-施設名',\n",
+      " 12: 'I-施設名',\n",
+      " 13: 'B-法人名',\n",
+      " 14: 'I-法人名',\n",
+      " 15: 'B-製品名',\n",
+      " 16: 'I-製品名'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ラベルとIDを対応付けるdictの作成\n",
+    "import torch\n",
+    "\n",
+    "def create_label2id(\n",
+    "    entities_list: list[list[dict[str, str | int]]]\n",
+    ") -> dict[str, int]:\n",
+    "    \"\"\"ラベルとIDを紐づけるdictを作成\"\"\"\n",
+    "    # \"O\"のIDには0を割り当てる\n",
+    "    label2id = {\"O\": 0}\n",
+    "    # 固有表現タイプのsetを獲得して並び替える\n",
+    "    entity_types = set(\n",
+    "        [e[\"type\"] for entities in entities_list for e in entities]\n",
+    "    )\n",
+    "    entity_types = sorted(entity_types)\n",
+    "    for i, entity_type in enumerate(entity_types):\n",
+    "        # \"B-\"のIDには奇数番号を割り当てる\n",
+    "        label2id[f\"B-{entity_type}\"] = i * 2 + 1\n",
+    "        # \"I-\"のIDには偶数番号を割り当てる\n",
+    "        label2id[f\"I-{entity_type}\"] = i * 2 + 2\n",
+    "    return label2id\n",
+    "\n",
+    "# ラベルとIDを紐づけるdictを作成する\n",
+    "label2id = create_label2id(dataset[\"train\"][\"entities\"])\n",
+    "id2label = {v:k for k, v in label2id.items()}\n",
+    "pprint(id2label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
